--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-	"name": "momenta-dva",
-	"version": "0.3.0",
-	"description": "dva for momoenta",
-	"main": "index.js",
-	"dependencies": {
-		"dva": "^2.2.3"
-	},
-	"devDependencies": {
-		"babel-cli": "^6.26.0",
-		"babel-plugin-transform-object-rest-spread": "^6.26.0",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-react": "^6.24.1",
-		"browserify": "^16.2.0"
-	},
-	"peerDependencies": {
-		"react": "*"
-	},
-	"scripts": {
-		"babel": "babel src --out-dir lib"
-	},
-	"author": "yankai"
+  "name": "momenta-dva",
+  "version": "0.4.0",
+  "description": "dva for momoenta",
+  "main": "index.js",
+  "dependencies": {
+    "dva": "^2.2.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "browserify": "^16.2.0"
+  },
+  "peerDependencies": {
+    "react": "*"
+  },
+  "scripts": {
+    "babel": "babel src --out-dir lib",
+    "prettier": "prettier --write '**/*.@(js|json|ts)'"
+  },
+  "author": "yankai"
 }
